# PairOfCleats

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pairofcleats.json  .rgignore  AGENTS.md  AINTKNOWMAP.md  APEX_STARBINDER_FORGE.md  ASTRAL_TITANFORGE.md  AVISPROVOC.md  All_Findings.md  BUILDLIST.md  CHANGELOG.md  COMPLETED_PHASES.md  COMPLETE_PLAN.md  COSMIC_DOCS_LEDGER.md  DONESWEEP.md  DONEWIDESWEEP.md  DOXFIX.md  DUPEMAP.md  FAST.md  FINDINGS.MD  FOURTEEN.md  FUTUREROADMAP.md  GIGAROADMAP.html  GIGAROADMAP.md  GIGAROADMAP_2.md  GIGASWEEP_2.md  HAWKTUI_ROADMAP.md  HISTORIC_COMPLETED_PHASES.md  JUANFAIV.md  LEXI.md  MCP_PLAN.md  NEW_ROADMAP.md  NEW_WORK.md  NEXTROADMAP.md  NIKE_SB_CHUNK_ROADMAP.md  NOVA_IMPORT_RESOLUTION_BLUEPRINT.md  NO_THIS_IS_PATRICK_ROADMAP.md  ORBITAL_HARDENING_LEDGER.md  (+82 more)
.github/: dependabot.yml  pull_request_template.md  release_template.md
GIGAROAD/: ROADMAP.md
STATIC_REVIEW/: CODEBASE_STATIC_REVIEW_FINDINGS.md  CODEBASE_STATIC_REVIEW_FINDINGS_BUILD_FILEPROCESSOR_MISC.md  CODEBASE_STATIC_REVIEW_FINDINGS_BUILD_INDEXER_RUNTIME.md  CODEBASE_STATIC_REVIEW_FINDINGS_BUILD_PIPELINE.md  CODEBASE_STATIC_REVIEW_FINDINGS_INTEGRATIONS_MAP.md  CODEBASE_STATIC_REVIEW_FINDINGS_PASS10_SHARDS_SMOKE_SQLITE_TESTS.md  CODEBASE_STATIC_REVIEW_FINDINGS_PASS10_TESTS_MISC_VSCODE_WATCH_WORKERPOOL.md  CODEBASE_STATIC_REVIEW_FINDINGS_PASS10_TESTS_SMOKE_SHARDS.md  CODEBASE_STATIC_REVIEW_FINDINGS_PASS10_TESTS_SMOKE_SHARDS_SQLITE_MISC.md  CODEBASE_STATIC_REVIEW_FINDINGS_PASS2.md  (+36 more)
crates/pairofcleats-tui/: Cargo.toml
crates/pairofcleats-tui/src/: main.rs
(+6631 files in other folders)
