[package]
name = "pairofcleats-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI supervisor client for PairOfCleats"
license = "MIT"

[dependencies]
anyhow = "=1.0.100"
crossterm = "=0.28.1"
ratatui = "=0.29.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
